--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cmd": "^0.1.0",
     "express": "^4.14.0",
     "jade": "^1.11.0",
+    "node": "^11.3.0",
     "node-cmd": "^3.0.0",
     "node-ssh": "^5.1.2"
   }
